--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,8 +27,7 @@
                 <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-                <li><a href="/login/form">Login</a></li>
-                <li><a href="/logout">Logout</a></li>
+            <%=login_menu%>
           </ul>
         </li>
  
@@ -46,7 +45,7 @@
     <hr>
 
     <div class="footer">
-      <p>&copy; Company 2012</p>
+      <p>&copy; Kitchen Ninja 2013</p>
     </div>
   </div> <!-- /container -->
 
