--- a/views/login_form.erb
+++ b/views/login_form.erb
@@ -1,4 +1,5 @@
-<form action='/login/attempt' method='post' class="form-inline well">
-  <input name='username' placeholder="username" autofocus>
+<form action='/login' method='post' class="form-inline well">
+  <input type="text" name='email' placeholder="email" autofocus>
+  <input type="password" name='password' placeholder="password" >
   <input class="btn primary" type='submit' value='log in'>
 </form>
