login system complete!

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,22 +15,7 @@
 
     <div class="masthead">
       <ul class="nav nav-pills pull-right">
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/secure/place">Secret</a></li>
-        <li class="dropdown">
-          <a href="#"
-                class="dropdown-toggle"
-                data-toggle="dropdown">
-                <%=username%>
-                <b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu">
-            <%=login_menu%>
-          </ul>
-        </li>
- 
+        <%= header_menu %>
       </ul>
       <h3 class="muted">Kitchen Ninja</h3>
     </div>
