--- a/views/register_form.erb
+++ b/views/register_form.erb
@@ -1,5 +1,6 @@
+<%= flash[:register_fail] %>
 <form action='/register' method='post' class="form-inline well">
   <input type="text" name='email' placeholder="email" autofocus>
   <input type="password" name='password' placeholder="password" >  
-  <input class="btn primary" type='submit' value='Register'>
+  <input class="btn primary" type='submit' value='Sign up'>
 </form>
