--- a/views/login_form.erb
+++ b/views/login_form.erb
@@ -1,5 +1,6 @@
+<%= flash[:login_fail] %>
 <form action='/login' method='post' class="form-inline well">
   <input type="text" name='email' placeholder="email" autofocus>
   <input type="password" name='password' placeholder="password" >
-  <input class="btn primary" type='submit' value='log in'>
+  <input class="btn primary" type='submit' value='Sign in'>
 </form>
