starting to fill in content to about and contact pages

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,1 +1,7 @@
-<a href="/contact">Link To Contact</a>
+<h3>The tale of the Ninja in the Kitchen</h3>
+<p>Like many of you, Max and I wanted to get in great shape. However as we soon learned it takes a lot more than just being a hero in the gym...</p>
+<p>In fact, the real reason for the 6-pack abs that Max is sporting is that he's also a hero in the kitchen! Cooking up chicken breasts en masse each weekend, counting calories, and balancing his macronutrient ratios is just the tip of the iceberg...</p>
+<p>As (meme woman name) would say, ain't nobody got time fo' dat! (meme image? link?) </p>
+<p>Enter Kitchen Ninja. We handle all of your food-related labors. All you do is show up 1-7 days per week at your gym and pick up the fresh, healthy and locally sourced meals which we prepared for you. With love :) </p>
+
+<p>What are you waiting for? <a href="#signup_goes_here">Sign up today!!</a></p>
