--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,1 +1,3 @@
-<a href="/about">Link To About</a>
+<h3>Howdy Stranger! </h3>
+<p>As a new start up still trying to find our place in the world we would absolutely love to hear your feedback :) </p>
+<p> Drop us a line at: sayhi@kitchenninja.com</p>
