Added Google Analytics to layout.erb

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,21 @@
   <link rel="icon" type="image/png" href="../assets/ico/favicon.png">
   <link rel="shortcut icon" href="../assets/ico/favicon.png">
   <link rel="stylesheet" href="/lib/kitchen_ninja.css">
+  <!--Google Analytics Code-->
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-37649738-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
+
 </head>
 <body>
   <div class="container-narrow">
