--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Kitchen Ninja</title>
+  <meta name="description" content="Meal service for the masses!">
+  <!-- le javascript + css -->
   <script src="/lib/jquery-1.8.3.js" type="text/javascript"></script>
   <script src="/lib/bootstrap/js/bootstrap.js"></script>
   <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.css">
