--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,7 +28,7 @@
 
 </head>
 <body>
-  <div class="container-narrow">
+  <div class="container">
 
     <div class="masthead">
       <ul class="nav nav-pills pull-right">
